generated/antlr/css/CSS3Parser.cpp

// Generated from grammars/CSS3.g4 by ANTLR 4.13.1


#include "CSS3Listener.h"
#include "CSS3Visitor.h"

#include "CSS3Parser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CSS3ParserStaticData final {
  CSS3ParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CSS3ParserStaticData(const CSS3ParserStaticData&) = delete;
  CSS3ParserStaticData(CSS3ParserStaticData&&) = delete;
  CSS3ParserStaticData& operator=(const CSS3ParserStaticData&) = delete;
  CSS3ParserStaticData& operator=(CSS3ParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag css3ParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
CSS3ParserStaticData *css3ParserStaticData = nullptr;

void css3ParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (css3ParserStaticData != nullptr) {
    return;
  }
#else
  assert(css3ParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CSS3ParserStaticData>(
    std::vector<std::string>{
      "stylesheet", "statement", "atRule", "block", "ruleset", "selector", 
      "combinator", "simpleSelector", "elementName", "declaration", "prio", 
      "expr", "term", "function", "unicodeRange", "hexcolor", "cssOperator", 
      "unaryOperator", "property", "any", "comment"
    },
    std::vector<std::string>{
      "", "'='", "'*'", "'U+'", "'\\u003F'", "'/'", "'-'", "", "", "'{'", 
      "'}'", "'('", "')'", "'['", "']'", "';'", "':'", "'.'", "','", "'+'", 
      "'>'", "'~'", "'~='", "'|='", "'^='", "'$='", "'*='", "'!important'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "COMMENT", "WS", "LBRACE", "RBRACE", "LPAREN", 
      "RPAREN", "LBRACKET", "RBRACKET", "SEMICOLON", "COLON", "DOT", "COMMA", 
      "PLUS", "GREATER", "TILDE", "INCLUDES", "DASHMATCH", "PREFIXMATCH", 
      "SUFFIXMATCH", "SUBSTRINGMATCH", "IMPORTANT_SYM", "AT_RULE_NAME", 
      "FUNCTION", "URI", "HASH", "NUMBER", "PERCENTAGE", "LENGTH", "EMS", 
      "EXS", "ANGLE", "TIME", "FREQ", "STRING", "IDENT", "HEX_DIGIT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  css3ParserStaticData = staticData.release();
}

}

CSS3Parser::CSS3Parser(TokenStream *input) : CSS3Parser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CSS3Parser::CSS3Parser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CSS3Parser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *css3ParserStaticData->atn, css3ParserStaticData->decisionToDFA, css3ParserStaticData->sharedContextCache, options);
}

CSS3Parser::~CSS3Parser() {
  delete _interpreter;
}

const atn::ATN& CSS3Parser::getATN() const {
  return *css3ParserStaticData->atn;
}

std::string CSS3Parser::getGrammarFileName() const {
  return "CSS3.g4";
}

const std::vector<std::string>& CSS3Parser::getRuleNames() const {
  return css3ParserStaticData->ruleNames;
}

const dfa::Vocabulary& CSS3Parser::getVocabulary() const {
  return css3ParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CSS3Parser::getSerializedATN() const {
  return css3ParserStaticData->serializedATN;
}


//----------------- StylesheetContext ------------------------------------------------------------------

CSS3Parser::StylesheetContext::StylesheetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CSS3Parser::StatementContext *> CSS3Parser::StylesheetContext::statement() {
  return getRuleContexts<CSS3Parser::StatementContext>();
}

CSS3Parser::StatementContext* CSS3Parser::StylesheetContext::statement(size_t i) {
  return getRuleContext<CSS3Parser::StatementContext>(i);
}


size_t CSS3Parser::StylesheetContext::getRuleIndex() const {
  return CSS3Parser::RuleStylesheet;
}

void CSS3Parser::StylesheetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSS3Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStylesheet(this);
}

void CSS3Parser::StylesheetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSS3Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStylesheet(this);
}


std::any CSS3Parser::StylesheetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSS3Visitor*>(visitor))
    return parserVisitor->visitStylesheet(this);
  else
    return visitor->visitChildren(this);
}

CSS3Parser::StylesheetContext* CSS3Parser::stylesheet() {
  StylesheetContext *_localctx = _tracker.createInstance<StylesheetContext>(_ctx, getState());
  enterRule(_localctx, 0, CSS3Parser::RuleStylesheet);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2201439379588) != 0)) {
      setState(42);
      statement();
      setState(47);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

CSS3Parser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CSS3Parser::RulesetContext* CSS3Parser::StatementContext::ruleset() {
  return getRuleContext<CSS3Parser::RulesetContext>(0);
}

CSS3Parser::AtRuleContext* CSS3Parser::StatementContext::atRule() {
  return getRuleContext<CSS3Parser::AtRuleContext>(0);
}

CSS3Parser::CommentContext* CSS3Parser::StatementContext::comment() {
  return getRuleContext<CSS3Parser::CommentContext>(0);
}


size_t CSS3Parser::StatementContext::getRuleIndex() const {
  return CSS3Parser::RuleStatement;
}

void CSS3Parser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSS3Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void CSS3Parser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSS3Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any CSS3Parser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSS3Visitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

CSS3Parser::StatementContext* CSS3Parser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, CSS3Parser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(51);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CSS3Parser::T__1:
      case CSS3Parser::LBRACKET:
      case CSS3Parser::COLON:
      case CSS3Parser::DOT:
      case CSS3Parser::HASH:
      case CSS3Parser::IDENT: {
        enterOuterAlt(_localctx, 1);
        setState(48);
        ruleset();
        break;
      }

      case CSS3Parser::AT_RULE_NAME: {
        enterOuterAlt(_localctx, 2);
        setState(49);
        atRule();
        break;
      }

      case CSS3Parser::COMMENT: {
        enterOuterAlt(_localctx, 3);
        setState(50);
        comment();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AtRuleContext ------------------------------------------------------------------

CSS3Parser::AtRuleContext::AtRuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSS3Parser::AtRuleContext::AT_RULE_NAME() {
  return getToken(CSS3Parser::AT_RULE_NAME, 0);
}

CSS3Parser::BlockContext* CSS3Parser::AtRuleContext::block() {
  return getRuleContext<CSS3Parser::BlockContext>(0);
}

tree::TerminalNode* CSS3Parser::AtRuleContext::SEMICOLON() {
  return getToken(CSS3Parser::SEMICOLON, 0);
}

std::vector<CSS3Parser::AnyContext *> CSS3Parser::AtRuleContext::any() {
  return getRuleContexts<CSS3Parser::AnyContext>();
}

CSS3Parser::AnyContext* CSS3Parser::AtRuleContext::any(size_t i) {
  return getRuleContext<CSS3Parser::AnyContext>(i);
}


size_t CSS3Parser::AtRuleContext::getRuleIndex() const {
  return CSS3Parser::RuleAtRule;
}

void CSS3Parser::AtRuleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSS3Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAtRule(this);
}

void CSS3Parser::AtRuleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSS3Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAtRule(this);
}


std::any CSS3Parser::AtRuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSS3Visitor*>(visitor))
    return parserVisitor->visitAtRule(this);
  else
    return visitor->visitChildren(this);
}

CSS3Parser::AtRuleContext* CSS3Parser::atRule() {
  AtRuleContext *_localctx = _tracker.createInstance<AtRuleContext>(_ctx, getState());
  enterRule(_localctx, 4, CSS3Parser::RuleAtRule);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(53);
    match(CSS3Parser::AT_RULE_NAME);
    setState(57);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(54);
        any(); 
      }
      setState(59);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
    setState(62);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CSS3Parser::LBRACE: {
        setState(60);
        block();
        break;
      }

      case CSS3Parser::SEMICOLON: {
        setState(61);
        match(CSS3Parser::SEMICOLON);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

CSS3Parser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSS3Parser::BlockContext::LBRACE() {
  return getToken(CSS3Parser::LBRACE, 0);
}

tree::TerminalNode* CSS3Parser::BlockContext::RBRACE() {
  return getToken(CSS3Parser::RBRACE, 0);
}

std::vector<CSS3Parser::DeclarationContext *> CSS3Parser::BlockContext::declaration() {
  return getRuleContexts<CSS3Parser::DeclarationContext>();
}

CSS3Parser::DeclarationContext* CSS3Parser::BlockContext::declaration(size_t i) {
  return getRuleContext<CSS3Parser::DeclarationContext>(i);
}


size_t CSS3Parser::BlockContext::getRuleIndex() const {
  return CSS3Parser::RuleBlock;
}

void CSS3Parser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSS3Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void CSS3Parser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSS3Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any CSS3Parser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSS3Visitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

CSS3Parser::BlockContext* CSS3Parser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 6, CSS3Parser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(CSS3Parser::LBRACE);
    setState(68);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CSS3Parser::IDENT) {
      setState(65);
      declaration();
      setState(70);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(71);
    match(CSS3Parser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RulesetContext ------------------------------------------------------------------

CSS3Parser::RulesetContext::RulesetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CSS3Parser::SelectorContext *> CSS3Parser::RulesetContext::selector() {
  return getRuleContexts<CSS3Parser::SelectorContext>();
}

CSS3Parser::SelectorContext* CSS3Parser::RulesetContext::selector(size_t i) {
  return getRuleContext<CSS3Parser::SelectorContext>(i);
}

tree::TerminalNode* CSS3Parser::RulesetContext::LBRACE() {
  return getToken(CSS3Parser::LBRACE, 0);
}

tree::TerminalNode* CSS3Parser::RulesetContext::RBRACE() {
  return getToken(CSS3Parser::RBRACE, 0);
}

std::vector<tree::TerminalNode *> CSS3Parser::RulesetContext::COMMA() {
  return getTokens(CSS3Parser::COMMA);
}

tree::TerminalNode* CSS3Parser::RulesetContext::COMMA(size_t i) {
  return getToken(CSS3Parser::COMMA, i);
}

std::vector<CSS3Parser::DeclarationContext *> CSS3Parser::RulesetContext::declaration() {
  return getRuleContexts<CSS3Parser::DeclarationContext>();
}

CSS3Parser::DeclarationContext* CSS3Parser::RulesetContext::declaration(size_t i) {
  return getRuleContext<CSS3Parser::DeclarationContext>(i);
}


size_t CSS3Parser::RulesetContext::getRuleIndex() const {
  return CSS3Parser::RuleRuleset;
}

void CSS3Parser::RulesetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSS3Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRuleset(this);
}

void CSS3Parser::RulesetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSS3Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRuleset(this);
}


std::any CSS3Parser::RulesetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSS3Visitor*>(visitor))
    return parserVisitor->visitRuleset(this);
  else
    return visitor->visitChildren(this);
}

CSS3Parser::RulesetContext* CSS3Parser::ruleset() {
  RulesetContext *_localctx = _tracker.createInstance<RulesetContext>(_ctx, getState());
  enterRule(_localctx, 8, CSS3Parser::RuleRuleset);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    selector();
    setState(78);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CSS3Parser::COMMA) {
      setState(74);
      match(CSS3Parser::COMMA);
      setState(75);
      selector();
      setState(80);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(81);
    match(CSS3Parser::LBRACE);
    setState(85);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CSS3Parser::IDENT) {
      setState(82);
      declaration();
      setState(87);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(88);
    match(CSS3Parser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectorContext ------------------------------------------------------------------

CSS3Parser::SelectorContext::SelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CSS3Parser::SimpleSelectorContext *> CSS3Parser::SelectorContext::simpleSelector() {
  return getRuleContexts<CSS3Parser::SimpleSelectorContext>();
}

CSS3Parser::SimpleSelectorContext* CSS3Parser::SelectorContext::simpleSelector(size_t i) {
  return getRuleContext<CSS3Parser::SimpleSelectorContext>(i);
}

std::vector<CSS3Parser::CombinatorContext *> CSS3Parser::SelectorContext::combinator() {
  return getRuleContexts<CSS3Parser::CombinatorContext>();
}

CSS3Parser::CombinatorContext* CSS3Parser::SelectorContext::combinator(size_t i) {
  return getRuleContext<CSS3Parser::CombinatorContext>(i);
}


size_t CSS3Parser::SelectorContext::getRuleIndex() const {
  return CSS3Parser::RuleSelector;
}

void CSS3Parser::SelectorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSS3Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelector(this);
}

void CSS3Parser::SelectorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSS3Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelector(this);
}


std::any CSS3Parser::SelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSS3Visitor*>(visitor))
    return parserVisitor->visitSelector(this);
  else
    return visitor->visitChildren(this);
}

CSS3Parser::SelectorContext* CSS3Parser::selector() {
  SelectorContext *_localctx = _tracker.createInstance<SelectorContext>(_ctx, getState());
  enterRule(_localctx, 10, CSS3Parser::RuleSelector);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    simpleSelector();
    setState(96);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 3670272) != 0)) {
      setState(91);
      combinator();
      setState(92);
      simpleSelector();
      setState(98);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CombinatorContext ------------------------------------------------------------------

CSS3Parser::CombinatorContext::CombinatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSS3Parser::CombinatorContext::PLUS() {
  return getToken(CSS3Parser::PLUS, 0);
}

tree::TerminalNode* CSS3Parser::CombinatorContext::GREATER() {
  return getToken(CSS3Parser::GREATER, 0);
}

tree::TerminalNode* CSS3Parser::CombinatorContext::TILDE() {
  return getToken(CSS3Parser::TILDE, 0);
}

tree::TerminalNode* CSS3Parser::CombinatorContext::WS() {
  return getToken(CSS3Parser::WS, 0);
}


size_t CSS3Parser::CombinatorContext::getRuleIndex() const {
  return CSS3Parser::RuleCombinator;
}

void CSS3Parser::CombinatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSS3Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCombinator(this);
}

void CSS3Parser::CombinatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSS3Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCombinator(this);
}


std::any CSS3Parser::CombinatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSS3Visitor*>(visitor))
    return parserVisitor->visitCombinator(this);
  else
    return visitor->visitChildren(this);
}

CSS3Parser::CombinatorContext* CSS3Parser::combinator() {
  CombinatorContext *_localctx = _tracker.createInstance<CombinatorContext>(_ctx, getState());
  enterRule(_localctx, 12, CSS3Parser::RuleCombinator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 3670272) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SimpleSelectorContext ------------------------------------------------------------------

CSS3Parser::SimpleSelectorContext::SimpleSelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CSS3Parser::ElementNameContext* CSS3Parser::SimpleSelectorContext::elementName() {
  return getRuleContext<CSS3Parser::ElementNameContext>(0);
}

tree::TerminalNode* CSS3Parser::SimpleSelectorContext::HASH() {
  return getToken(CSS3Parser::HASH, 0);
}

tree::TerminalNode* CSS3Parser::SimpleSelectorContext::DOT() {
  return getToken(CSS3Parser::DOT, 0);
}

std::vector<tree::TerminalNode *> CSS3Parser::SimpleSelectorContext::IDENT() {
  return getTokens(CSS3Parser::IDENT);
}

tree::TerminalNode* CSS3Parser::SimpleSelectorContext::IDENT(size_t i) {
  return getToken(CSS3Parser::IDENT, i);
}

tree::TerminalNode* CSS3Parser::SimpleSelectorContext::LBRACKET() {
  return getToken(CSS3Parser::LBRACKET, 0);
}

tree::TerminalNode* CSS3Parser::SimpleSelectorContext::RBRACKET() {
  return getToken(CSS3Parser::RBRACKET, 0);
}

tree::TerminalNode* CSS3Parser::SimpleSelectorContext::PREFIXMATCH() {
  return getToken(CSS3Parser::PREFIXMATCH, 0);
}

tree::TerminalNode* CSS3Parser::SimpleSelectorContext::SUFFIXMATCH() {
  return getToken(CSS3Parser::SUFFIXMATCH, 0);
}

tree::TerminalNode* CSS3Parser::SimpleSelectorContext::SUBSTRINGMATCH() {
  return getToken(CSS3Parser::SUBSTRINGMATCH, 0);
}

tree::TerminalNode* CSS3Parser::SimpleSelectorContext::INCLUDES() {
  return getToken(CSS3Parser::INCLUDES, 0);
}

tree::TerminalNode* CSS3Parser::SimpleSelectorContext::DASHMATCH() {
  return getToken(CSS3Parser::DASHMATCH, 0);
}

tree::TerminalNode* CSS3Parser::SimpleSelectorContext::STRING() {
  return getToken(CSS3Parser::STRING, 0);
}

std::vector<tree::TerminalNode *> CSS3Parser::SimpleSelectorContext::COLON() {
  return getTokens(CSS3Parser::COLON);
}

tree::TerminalNode* CSS3Parser::SimpleSelectorContext::COLON(size_t i) {
  return getToken(CSS3Parser::COLON, i);
}

tree::TerminalNode* CSS3Parser::SimpleSelectorContext::LPAREN() {
  return getToken(CSS3Parser::LPAREN, 0);
}

tree::TerminalNode* CSS3Parser::SimpleSelectorContext::RPAREN() {
  return getToken(CSS3Parser::RPAREN, 0);
}

tree::TerminalNode* CSS3Parser::SimpleSelectorContext::NUMBER() {
  return getToken(CSS3Parser::NUMBER, 0);
}


size_t CSS3Parser::SimpleSelectorContext::getRuleIndex() const {
  return CSS3Parser::RuleSimpleSelector;
}

void CSS3Parser::SimpleSelectorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSS3Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSimpleSelector(this);
}

void CSS3Parser::SimpleSelectorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSS3Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSimpleSelector(this);
}


std::any CSS3Parser::SimpleSelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSS3Visitor*>(visitor))
    return parserVisitor->visitSimpleSelector(this);
  else
    return visitor->visitChildren(this);
}

CSS3Parser::SimpleSelectorContext* CSS3Parser::simpleSelector() {
  SimpleSelectorContext *_localctx = _tracker.createInstance<SimpleSelectorContext>(_ctx, getState());
  enterRule(_localctx, 14, CSS3Parser::RuleSimpleSelector);
  size_t _la = 0;
